--- a/Votechain/pubspec.yaml
+++ b/Votechain/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.1.1
   http: ^0.13.3
   url_launcher: ^6.1.11
+  hexcolor: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
