--- a/Votechain/pubspec.yaml
+++ b/Votechain/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0-171.0.dev <4.0.0'
+  sdk: '>=3.0.5 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -44,11 +44,11 @@ dependencies:
   http: ^0.13.3
   url_launcher: ^6.1.11
   hexcolor: ^3.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons:
-
 flutter_icons:
   android: 'launcher_icon'
   ios: true
