--- a/Votechain/pubspec.yaml
+++ b/Votechain/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   http: ^0.13.3
   url_launcher: ^6.1.11
   hexcolor: ^3.0.1
-
+  syncfusion_flutter_charts: ^22.1.36
 dev_dependencies:
   flutter_test:
     sdk: flutter
